# DictaClerk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  CMake_INTEGRATION.md  DEBUG_RECORDING_ISSUE.md  HOWTO.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  profiles.json  profiles.json.example  settings.json  settings.json.example  setup-precommit.sh  tailwind.config.ts  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  ENCODER_README.md  PROFILE_ENGINE_USAGE.md  build.rs  deny.toml  profiles.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: PERMISSION_BOUNDARIES.md  default.json
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/audio/: capture.rs  encoder.rs  mod.rs
src-tauri/src/commands/: audio.rs  clipboard.rs  encoder.rs  error_recovery.rs  gpt.rs  mod.rs  profiles.rs  settings.rs  shortcut.rs  state_machine.rs  system_tray.rs  whisper.rs
src-tauri/src/config/: mod.rs  validator.rs
src-tauri/src/services/: clipboard_svc.rs  gpt_client.rs  mod.rs  notifier.rs  profile_engine.rs  shortcut_mgr.rs  size_guard.rs  system_tray.rs  whisper_client.rs
src-tauri/src/state/: mod.rs  recording_state_machine.rs
src-tauri/src/state/tests/: mod.rs
src-tauri/src/state/tests/unit/: builder_pattern.rs  event_processing.rs  mod.rs  (+2 more)
src-tauri/tests/: config_validation_tests.rs  integration_test.rs  persistence_durability_tests.rs
src-tauri/tests/fixtures/: invalid_profiles_incomplete_example.json  invalid_settings_malformed.json  invalid_settings_missing_api_key.json
(+78 files in other folders)
