[package]
name = "dicta-clerk"
version = "0.1.0"
description = "DictaClerk - Voice transcription tool"
authors = ["lsmod"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dicta_clerk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.2.0", features = [] }

[dependencies]
tauri = { version = "=2.5.1", features = ["tray-icon"] }
tauri-plugin-opener = "=2.2.7"
tauri-plugin-global-shortcut = "=2.2.0"
tauri-plugin-notification = "=2.2.2"
tauri-plugin-clipboard-manager = "=2.2.1"
serde = { version = "=1.0.215", features = ["derive"] }
serde_json = "=1.0.133"
# JSON schema validation
jsonschema = "0.19"
# Audio capture dependencies
cpal = "0.15.3"
hound = "3.5.1"
tokio = { version = "1.32", features = ["rt-multi-thread", "sync", "fs", "time", "test-util", "macros"] }
tempfile = "3.8"
async-trait = "0.1"
thiserror = "1.0"
# OS directories for configuration files
dirs = "5.0"
# Audio encoding dependencies
vorbis_rs = "0.5.5"
ogg = "0.9"
byteorder = "1.5"
# HTTP client for Whisper API
reqwest = { version = "0.12", features = ["json", "multipart"] }
# Logging
log = "0.4"

[dev-dependencies]
serial_test = "3.0"
